# fish_recap

./: .gitignore  README.md  compare_fish.qmd  compare_fish_py.qmd  explore_matching_results.qmd  pyproject.toml  requirements.txt  visualize_features.qmd
configs/: config.yaml
scripts/: check_hf_access.py  match_fish.py  process_images.py  rename_and_process_csfi.py
src/: __init__.py  pipeline.py
src/matching/: __init__.py  deep_metric.py  feature_extraction.py  geometric_verification.py  matcher.py
src/preprocessing/: __init__.py  metric_extraction.py  segmentation.py  standardization.py
src/utils/: __init__.py  data_utils.py  image_utils.py  visualization.py
src/visual/: __init__.py  fish_comparison.py
tests/: __init__.py  test_matching.py  test_preprocessing.py
