[project]
name = "fish-recap"
version = "0.1.0"
description = "Automated stream fish re-identification using natural spot patterns and computer vision"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Fish Re-ID Team"}
]
keywords = ["computer-vision", "fish-identification", "wildlife-conservation", "image-processing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Computer Vision
    "opencv-python>=4.8.0",
    "opencv-contrib-python>=4.8.0",  # For SIFT support
    
    # Deep Learning
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    
    # Scientific Computing
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-image>=0.20.0",  # For skeletonization and image processing
    "scikit-learn>=1.0.0",   # For PCA-based rotation alignment
    "networkx>=3.0",        # For graph-based skeleton analysis
    
    # Data Management
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line length handled by black

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

